--- a/CPP/C-C++01.md
+++ b/CPP/C-C++01.md
@@ -217,6 +217,9 @@
 
 ## C++ this指针
 
++ 在非`static`成员函数中，关键字this是指向调用它的对象的指针
++ this被当作一个右值，因此我们无法获得this的地址或给它赋值
+
 + 在C++中，每一个对象都能通过 `this` 指针来访问自己的地址。
 + `this` 指针是所有成员函数的隐含参数。因此，在成员函数内部，它可以用来指向调用对象。
 + 友元函数没有 `this` 指针，因为友元不是类的成员。只有成员函数才有 `this` 指针
@@ -225,9 +228,11 @@
   - 一个对象的 `this` 指针并不是对象本身的一部分，不会影响`sizeof（对象）`的结果
   - `this` 作用域是在类内部，当在类的非静态成员函数中访问类的非静态成员的时候，编译器会自动将对象本身的地址作为一个隐含参数传递给函数
   - 也就是说，即使没有写上 `this` 指针，编译器在编译的时候也是加上 `this` 的，它作为非静态成员函数的隐含形参，对各成员的访问均通过 `this` 进行
+
 + `this` 指针的**使用**：
   - 一种情况是，在**类的非静态成员函数中返回类对象本身的时候**，直接使用`return *this`
   - 另外一种情况是当**参数与成员变量名相同时**，例如：`this->n = n`
+
 + 关于 `this` 指针的一个经典回答：
   - 当你进入一个房子后，你可以看见桌子，椅子，地板等，但是房子你是看不到全貌了；对于一个类的实例来说，你可以看到它的成员函数，成员变量，但是实例本身呢？
   - `this` 是一个指针，它时时刻刻指向你这个实例本身。
@@ -446,7 +451,7 @@
 
 + 函数重载的关键是函数的参数列表--也称为**函数特征标**(`function signature`)。
 + 如果两个函数的参数数目和类型相同，同时参数的排列顺序也相同，则它们的特征标相同，而变量名是无关紧要的。
-+ C++允许定义名称相同的函数，条件是它们的特征标不同。如果参数数目和/或参数类型不同，则特征标也不同。
++ **C++允许定义名称相同的函数，条件是它们的特征标不同**。如果参数数目和/或参数类型不同，则特征标也不同。
 
 + 何时使用函数重载？
   + 仅当函数基本上执行相同的任务，但是使用不同形式的数据时，才应该采用函数重载
@@ -828,16 +833,33 @@
     - 功能：返回数组中第n个位置的元素的引用。返回数组中指定位置的元素
     - 函数原型：`reference at(size_type n);const_reference at(size_type n) const;`
 
-## 容器 
+## 容器
 
 + 容器（`container`）
   - 容器是指一个包含若干元素的对象，因为`Vector`的对象都是容器，所以我们称`Vector`是一种容器类型。
   - 如果**一个类的主要目的是保存一些对象**，那么我们通常称之为容器。
 
++ 容器（`container`），是指一个包含若干元素的对象，因为`Vector`的对象都是容器，所以我们称`Vector`是一种容器类型。
++ 如果一个类的主要目的是保存一些对象，那么我们通常称之为容器。
+
++ `Vector`的构造函数使用`new`运算符从自由存储（也称堆或动态存储）分配一些内存空间，析构函数则使用`delete`运算符释放该空间以达到清理资源的目的。这一切都无需`Vector`的使用者干预
++ 构造函数负责分配元素空间并正确地初始化`Vector`成员，析构函数则负责释放空间。这就是所谓的**数据句柄模型（handle-to-data model）**，常用来管理在对象声明周期中大小会发生变化的数据
++ 和所有标准库容器一样，`vector`也是元素类型为T的容器，即`vector<T>`。几乎任意一种数据类型都可以作为容器的元素类型
++ 在构造函数中请求资源，然后在析构函数中释放它们的技术称为**资源获取即初始化(Resource Acquisition Is Initialzation)**，简称RAII，它使得我们得以规避“裸`new`操作”的风险。同时，也应该避免“裸`delete`操作”
+
 ## 二维容器
 
 + `vector`**不能容纳对象引用作为其元素**，因为引用不是一个对象。
 + 在`C++11`中，二维容器的定义可以写成`vector<vector<int > >`
+
+### 迭代器
+
++ 任何一种特定的迭代器都是某种类型的对象
++ 迭代器的类型非常多，因为每个迭代器都是与某个特定容器类型相关联的。
++ 它需要保存一些必要的信息，以便我们对容器执行某些特定的人物。因此，有多少种容器就有多少中迭代器，有多少中特殊要求就有多少种迭代器
++ 所有迭代器类型的语义及其操作的命名都是相似的。例如，对任何迭代器使用`++`运算符都会得到一个指向下一个元素的迭代器，而`*`运算符则得到迭代器所指的元素。
++ 实际上，任何符合这些简单规则的对象都能被看成是迭代器。
++ 用户不需要知道某个特定迭代器的类型，迭代器“知道”它自己的迭代器类型是什么，而且都能通过规范的名字`iterator`和`const_iterator`来正确声明自己的类型。
 
 ## 类
 
@@ -917,25 +939,6 @@
   - 如果声明不写`public, protected, private`，则默认为`private`
   - 声明`public, protected, private`的顺序可以是任意的
   - 在一个类中，`public, protected, private`可以出现多次，每个限定符的有效范围到出现另一个限定符或类结束为止。但是为了使程序逻辑清晰，应该使每一种限定符只出现一次。
-
-## 容器 二
-
-+ 容器（`container`），是指一个包含若干元素的对象，因为`Vector`的对象都是容器，所以我们称`Vector`是一种容器类型。
-+ 如果一个类的主要目的是保存一些对象，那么我们通常称之为容器。
-
-+ `Vector`的构造函数使用`new`运算符从自由存储（也称堆或动态存储）分配一些内存空间，析构函数则使用`delete`运算符释放该空间以达到清理资源的目的。这一切都无需`Vector`的使用者干预
-+ 构造函数负责分配元素空间并正确地初始化`Vector`成员，析构函数则负责释放空间。这就是所谓的**数据句柄模型（handle-to-data model）**，常用来管理在对象声明周期中大小会发生变化的数据
-+ 和所有标准库容器一样，`vector`也是元素类型为T的容器，即`vector<T>`。几乎任意一种数据类型都可以作为容器的元素类型
-+ 在构造函数中请求资源，然后在析构函数中释放它们的技术称为**资源获取即初始化(Resource Acquisition Is Initialzation)**，简称RAII，它使得我们得以规避“裸`new`操作”的风险。同时，也应该避免“裸`delete`操作”
-
-### 迭代器
-
-+ 任何一种特定的迭代器都是某种类型的对象
-+ 迭代器的类型非常多，因为每个迭代器都是与某个特定容器类型相关联的。
-+ 它需要保存一些必要的信息，以便我们对容器执行某些特定的人物。因此，有多少种容器就有多少中迭代器，有多少中特殊要求就有多少种迭代器
-+ 所有迭代器类型的语义及其操作的命名都是相似的。例如，对任何迭代器使用`++`运算符都会得到一个指向下一个元素的迭代器，而`*`运算符则得到迭代器所指的元素。
-+ 实际上，任何符合这些简单规则的对象都能被看成是迭代器。
-+ 用户不需要知道某个特定迭代器的类型，迭代器“知道”它自己的迭代器类型是什么，而且都能通过规范的名字`iterator`和`const_iterator`来正确声明自己的类型。
 
 ## 模板
 
