--- a/CPP/C-C++02.md
+++ b/CPP/C-C++02.md
@@ -687,11 +687,11 @@
 
 ## fstat()
 
-+ 功能：获取文件的所有信息
++ 功能：获取报告与打开的文件描述符`fildes`有关的文件的状态信息
 + 原型：`int fstat(int __fd, struct stat *__buf);`
 + 参数：
   + `__fd`  --  文件描述符
-  + `__buf` --  内存区域指针
+  + `__buf` --  内存区域指针，用户提供的缓冲区，`fstat`将信息写入这个缓冲区
 + 返回值：
   + 成功  --  0
   + 失败  --  1
@@ -1053,6 +1053,30 @@
   + `range-declaration`  --  it is declaration of a variable of type same as the type of elements of range-expression. Often the auto keyword is used to automatically identify the type of elements in range-expression.
   + `range-expression`   --  any expression used to represent a sequence of elements. Also Sequence of elements in braces can be used.
   + `loop-statement`     --  body of for loop that contains one or more statements that are to be executed repeatedly till the end of range-expression
+
+## map 
+
++ 简介：
+  + map内部数据的组织，map内部自建一颗红黑树(一 种非严格意义上的平衡二叉树)，这颗树具有对数据自动排序的功能，所以在map内部所有的数据都是有序的
+  + map的特点是增加和删除节点对迭代器的影响很小，除了那个操作节点，对其他的节点都没有什么影响
+  + 对于迭代器来说，可以修改实值，而不能修改key
+
++ 功能：
+  + 根据key值快速查找记录，查找的复杂度基本是Log(N)，如果有1000个记录，最多查找10次（2^10)，1,000,000个记录，最多查找20次
+  + 快速插入Key -Value 记录
+  + 快速删除记录
+  + 根据Key 修改value记录
+  + 遍历所有记录
+
++ 使用：
+  + `#include <map>  //注意，STL头文件没有扩展名.h`
+  + map对象是模板类，需要关键字和存储对象两个模板参数：
+    + `std:map<int,string> personnel;`
+    + 这样就定义了一个用int作为索引,并拥有相关联的指向string的指针
+
++ 对应的迭代器
+  + first  --  键
+  + second --  键值
 
 ## 概述
 
