--- a/CPP/C-C++03.md
+++ b/CPP/C-C++03.md
@@ -1,4 +1,4 @@
-## strrchr()
+## strchr()
 
 + 功能：在参数 `str` 所指向的字符串中搜索最后一次出现字符 `c`（一个无符号字符）的位置
 + 原型：`char* strrchr(const char *str, int c);`
@@ -255,6 +255,65 @@
   + 成功  --  x的平方根
 + 需求：
   + 头文件：`#include <math.h>`
+
+## opendir()
+
++ 功能：打开一个目录文件
++ 原型：`DIR *opendir(const char *dirname);`
++ 参数：
+  + `dirname`  --  目录
++ 返回值：
+  + 成功  --  返回一个指向目录对象的指针
+  + 失败  --  返回一个空指针，并设置errno
++ 需求：
+  + 头文件：`#include <dirent.h>`
++ 注意：
+  + 定义在dirent.h中的DIR类型，表示的是一个**目录流**(directory stream)
+  + 目录流是一个特定目录中所有目录项组成的一个有序序列。目录流中的条目不一定是按文件名的字母顺序排列的
+
+## readdir()
+
++ 功能：读取一个目录文件中的数据
++ 原型：`struct dirent *readdir(DIR *dirp);`
++ 参数：
+  + `dirp`  --  目录对象的指针
++ 返回值：
+  + 成功  --  返回一个指向`struct dirent`结构的指针，结构中包含了与下一个目录项有关的信息
+  + 失败  --  返回一个NULL指针，并设置errno
+    + `readdir()`的实现必须检测的错误只有一种，就是要返回的结构中的值无法正确表达，其错误码是`EOVERFLOW`
+    + `readdir()`函数也返回NULL来指示目录的末尾，但在这种情况下它并不改变errno
++ 需求：
+  + 头文件：`#include <dirent.h>`
++ 注意：
+  + `readdir`在每次调用之后都将流转移到下一个位置上去
+
+## stat()
+
++ 功能：通过名字来访问文件
++ 原型：`int stat(const char *restrict path, struct stat *restrict buf);`
++ 参数：
+  + `path`  --  指定了需要返回状态的文件或符号链接的名字
+  + `buf`   --  指向一个用户提供的缓冲区，这些函数都将信息存储在这个缓冲区中
++ 返回值：
+  + 成功  --  0
+  + 失败  --  -1，并设置errno
+
+## C++类的构造函数后加冒号
+
++ 例如：`Mat::Mat(const Mat &src):Mat();`
+
++ 单冒号的作用是：表示后面是初始化列表
++ 这样的写法一般有三种使用场景
+  + 对父类进行初始化。
+    + 目的：在创建子类对象时,能够把参数传给父类,从而先完成对父类的初始化.子类构造函数必须要调用父类的构造函数（无论显式还是隐式）
+    + 调用格式：**`子类构造函数 : 父类构造函数`**
+  + 对类成员进行初始化
+    + 调用格式:`构造函数 : A(初始值),B(初始值),C(初始值)……`
+  + 对类的const成员变量进行初始化
+    + 由于const成员变量的值无法在构造函数内部初始化，因此只能在变量定义时赋值或使用初始化列表赋值
++ 对于2、3中的应用场景，有以下两点说明
+  + 构造函数列表初始化执行顺序与成员变量在类中声明顺序相同，与初始化列表中语句书写先后无关
+  + 相对于在构造函数中赋值，初始化列表执行效率更高。
 
 ## 强制转换运算符（强制类型转换）
 
@@ -515,3 +574,56 @@
 ### 谨记
 
 + 编程是练基本功的，工程是练思路和管理的，思路不行，永远只是个码农，基本功不扎实，思路再好也出不来干货，切勿眼高手低
+
+## C++11 lambda匿名函数
+
+### 概述
+
++ lambda 源自希腊字母表中第 11 位的 λ，在计算机科学领域，它则是被用来表示一种匿名函数
++ 所谓匿名函数，简单地理解就是没有名称的函数，又常被称为 lambda 函数或者 lambda 表达式
+
+### 详解
+
++ lambda匿名函数的定义
+  + `[外部变量访问方式说明符] (参数) mutable noexcept/throw() -> 返回值类型 { 函数体; };`
++ 其中各部分的含义分别为：
+  + 1) `[外部变量方位方式说明符]`
+    + `[ ]` 方括号用于向编译器表明当前是一个 lambda 表达式，其不能被省略。在方括号内部，可以注明当前 lambda 函数的函数体中可以使用哪些“外部变量”。
+    + 所谓外部变量，指的是和当前 lambda 表达式位于同一作用域内的所有局部变量。
+  + 2) `(参数)`
+    + 和普通函数的定义一样，lambda 匿名函数也可以接收外部传递的多个参数。和普通函数不同的是，如果不需要传递参数，可以连同 () 小括号一起省略；
+  + 3) `mutable`
+    + 此关键字可以省略，如果使用则之前的 () 小括号将不能省略（参数个数可以为 0）。
+    + 默认情况下，对于以值传递方式引入的外部变量，不允许在 lambda 表达式内部修改它们的值（可以理解为这部分变量都是 const 常量）
+    + 而如果想修改它们，就必须使用 mutable 关键字。
+    + 对于以值传递方式引入的外部变量，lambda 表达式修改的是拷贝的那一份，并不会修改真正的外部变量；
+  + 4) `noexcept/throw()`
+    + 可以省略，如果使用，在之前的 () 小括号将不能省略（参数个数可以为 0）。
+    + 默认情况下，lambda 函数的函数体中可以抛出任何类型的异常。
+    + 而标注 noexcept 关键字，则表示函数体内不会抛出任何异常；
+    + 使用 throw() 可以指定 lambda 函数内部可以抛出的异常类型。
+    + 如果 lambda 函数标有 noexcept 而函数体内抛出了异常，又或者使用 throw() 限定了异常类型而函数体内抛出了非指定类型的异常，这些异常无法使用 try-catch 捕获，会导致程序执行失败
+  + 5) `-> 返回值类型`
+    + 指明 lambda 匿名函数的返回值类型
+    + 如果 lambda 函数体内只有一个 return 语句，或者该函数返回 void，则编译器可以自行推断出返回值类型，此情况下可以直接省略-> 返回值类型。
+  + 6) 函数体
+    + 和普通函数一样，lambda 匿名函数包含的内部代码都放置在函数体中。
+    + 该函数体内除了可以使用指定传递进来的参数之外，还可以使用指定的外部变量以及全局范围内的所有全局变量
+    + 外部变量会受到以值传递还是以引用传递方式引入的影响，而全局变量则不会。
+    + 换句话说，在 lambda 表达式内可以使用任意一个全局变量，必要时还可以直接修改它们的值。
++ 定义了一个最简单的 lambda 匿名函数
+  + `[]{}`
+  + 显然，此 lambda 匿名函数未引入任何外部变量（[] 内为空），也没有传递任何参数，没有指定 mutable、noexcept 等关键字，没有返回值和函数体。
+  + 所以，这是一个没有任何功能的 lambda 匿名函数。
+
++ lambda匿名函数中的`[外部变量]`
+  + `[]`  --  空方括号表示当前 lambda 匿名函数中不导入任何外部变量。
+  + `[=]` --  只有一个 = 等号，表示以值传递的方式导入所有外部变量；
+  + `[&]` --  只有一个 & 符号，表示以引用传递的方式导入所有外部变量；
+  + `[val1, val2, ...]`   --  表示以值传递的方式导入 val1、val2 等指定的外部变量，同时多个变量之间没有先后次序；
+  + `[&val1, &val2, ...]` --  表示以引用传递的方式导入 val1、val2等指定的外部变量，多个变量之间没有前后次序；
+  + `[val, &val2, ...]`   --  以上 2 种方式还可以混合使用，变量之间没有前后次序。
+  + `[=, &val1, ...]`     --  表示除 val1 以引用传递的方式导入外，其它外部变量都以值传递的方式导入。
+  + `[this]`  --  **表示以值传递的方式导入当前的 this 指针**
++ **注意**:
+  + 单个外部变量不允许以相同的传递方式导入多次。例如 `[=，val1]` 中，val1 先后被以值传递的方式导入了 2 次，这是非法的
