--- a/CPP/C-C++03.md
+++ b/CPP/C-C++03.md
@@ -298,6 +298,46 @@
   + 成功  --  0
   + 失败  --  -1，并设置errno
 
+## link()
+
++ 功能：为`path1`指定的已存在文件创建一个新的目录项，这个文件位于`path2`指定的目录中
++ 原型：`int link(const char *path1, const char *path2)`
++ 参数：
+  + `path1`  --  已存在文件
+  + `path2`  --  指定的目录
++ 返回值：
+  + 成功  -- 0
+  + 失败  -- -1
++ 需求：
+  + 头文件：`#include <unistd.h>`
+
+## unlink()
+
++ 功能：删除了path指定的目录项
++ 原型：`int unlink(const char *path);`
++ 参数：
+  + `path`  --  需要删除的目录项
++ 返回值：
+  + 成功  -- 0
+  + 失败  -- -1
++ 需求：
+  + 头文件：`#include <unistd.h>`
+  
+## symlink()
+
++ 功能：创建一个符号链接
++ 原型：`int symlink(const char *path1, const char *path2);`
++ 参数：
+  + `path1`  --  包含了将成为链接的内容的字符串
+  + `path2`  --  链接的路径名
++ 返回值：
+  + 成功  -- 0
+  + 失败  -- -1
++ 需求：
+  + 头文件：`#include <unistd.h>`
++ 注意：
+  + 换句话来说，path2就是新创建的链接，而新链接指向path1
+
 ## C++类的构造函数后加冒号
 
 + 例如：`Mat::Mat(const Mat &src):Mat();`
