--- a/CPP/C-C++01.md
+++ b/CPP/C-C++01.md
@@ -852,7 +852,7 @@
 + `vector`**不能容纳对象引用作为其元素**，因为引用不是一个对象。
 + 在`C++11`中，二维容器的定义可以写成`vector<vector<int > >`
 
-### 迭代器
+## 迭代器
 
 + 任何一种特定的迭代器都是某种类型的对象
 + 迭代器的类型非常多，因为每个迭代器都是与某个特定容器类型相关联的。
