--- a/CPP/C-C++03.md
+++ b/CPP/C-C++03.md
@@ -24,6 +24,21 @@
   + 失败  --  -1
 + 需求：
   + 头文件：`#include <unistd.h>`
++ 注意：
+  + 管道没有外部或永久的名字，因此程序只能通过它的两个描述符来访问它
+  + 因此，管道只能由创建它的进程或在`fork`时继承了它的描述符的后代进程使用。
+
+## mkfifo()
+
++ 功能：创建新的FIFO特殊文件
++ 原型：`int mkfifo(const char *path, mode_t mode);`
++ 参数：
+  + `path`  --  创建的文件路径
+  + `mode`  --  文件权限
++ 返回值：
+  + 成功  --  0
+  + 失败  --  -1，并设置errno
++ 
 
 ## fork()
 
