--- a/CPP/C-C++02.md
+++ b/CPP/C-C++02.md
@@ -429,6 +429,22 @@
   + 成功  --  该函数返回位置标识符的当前值
   + 失败  --  返回 -1L，全局变量 errno 被设置为一个正值。
 
+## fgets()
+
++ 功能：从指定的流 stream 读取一行，并把它存储在 str 所指向的字符串内
++ 原型：`char *fgets(char *str, int n, FILE *stream);`
++ 参数：
+  + str -- 这是指向一个字符数组的指针，该数组存储了要读取的字符串。
+  + n -- 这是要读取的最大字符数（包括最后的空字符）。通常是使用以 str 传递的数组长度
+  + stream -- 这是指向 FILE 对象的指针，该 FILE 对象标识了要从中读取字符的流。
++ 返回值：
+  + 成功  --  返回相同的 str 参数。如果到达文件末尾或者没有读取到任何字符，str 的内容保持不变，并返回一个空指针。
+  + 失败  --  返回一个空指针。
++ 注意：
+  + 当读取 (n-1) 个字符时，或者读取到换行符时，或者到达文件末尾时，它会停止，具体视情况而定
+
+## getline()
+
 ## rewind()
 
 + 功能：设置文件位置为给定流 `stream` 的文件的开头
@@ -591,6 +607,38 @@
 + 返回值：指向字符串对象值的C字符串表示形式的指针。
 
 ## strtok()
+
++ 功能： 分解字符串 str 为一组字符串，delim 为分隔符
++ 原型：`char *strtok(char *str, const char *delim);`
++ 参数：
+  + str -- 要被分解成一组小字符串的字符串。
+  + delim -- 包含分隔符的 C 字符串。
++ 返回值：
+  + 函数返回被分解的第一个子字符串
+  + 如果没有可检索的字符串，则返回一个空指针。
++ 注意：
+  + 首次调用时，`str`指向要分解的字符串，之后再次调用要把`str`设置称为NULL
+  + 当strtok()在参数s的字符串中发现参数delim中包含的分割字符时,则会将该字符改为\0 字符。
+  + 在第一次调用时，strtok()必需给予参数s字符串，往后的调用则将参数s设置成NULL。每次调用成功则返回指向被分割出片段的指针
+  + 需要注意的是，**使用该函数进行字符串分割时，会破坏被分解字符串的完整，调用前和调用后的s已经不一样了**。
+  + 第一次分割之后，原字符串str是分割完成之后的第一个字符串，剩余的字符串存储在一个静态变量中，因此多线程同时访问该静态变量时，则会出现错误。
+
+## strtok_r()
+
++ 功能：linux下分割字符串的安全函数
++ 原型：`char *strtok_r(char *str, const char *delim, char **saveptr);`
++ 参数：
+  + str -- 要被分解成一组小字符串的字符串。
+  + delim -- 包含分隔符的 C 字符串。
+  + saveptr -- 保存剩余的字符
++ 返回值：
+  + 函数返回被分解的第一个子字符串
+  + 如果没有可检索的字符串，则返回一个空指针。
++ 注意：
+  + 该函数也会破坏带分解字符串的完整性，但是其将剩余的字符串保存在saveptr变量中，保证了安全性
+
+## strchr和sscanf组合，按指定分隔符分割字符串
+
 
 ## strtol()
 
