--- a/CPP/C-C++01.md
+++ b/CPP/C-C++01.md
@@ -9,14 +9,13 @@
 + `4`表示输出的十六进制数的宽度是4个字符
 + `0`表示输出的十六进制数中，不足4个字符的部分，用`0`来补充，以达到4个字符的宽度
 
-## **字符串**
-
-### C语言中
+## 字符串 -- C语言
 
 + 字符串(character string)是一个或多个字符的序列，例如"this is a string!"
-+ **双引号不是字符串的一部分。双引号仅告知编译器它括起来的是字符串，正如单引号用于标识单个字符一样。**
++ 双引号不是字符串的一部分。双引号**仅告知编译器它括起来的是字符串**，正如单引号用于标识单个字符一样。
 
-+ C语言没有专门用于存储字符串的变量类型，**字符串都被存储在`char`类型的数组中**。数组由连续的存储单元组成，字符串中的字符被存储在相邻的存储单元中，每个单元存储一个字符。
++ C语言没有专门用于存储字符串的变量类型，**字符串都被存储在`char`类型的数组中**。
++ 数组由连续的存储单元组成，字符串中的字符被存储在相邻的存储单元中，每个单元存储一个字符。
 + 数组名是数组首元素的地址
 
 + 字符串和字符
@@ -24,29 +23,7 @@
   + 区别之一在于"x"是**基本类型(char)**，而"y"是**派生类型(char数组)**；
   + 区别之二是"y"实际上由两个字符组成：'x'和空字符'\0'
 
-## 类型说明符(占位符)
-
-+ `%a, %A` : 读入一个浮点值(仅 C99 有效)  --  `	float *`
-+ `%c`     : 单个字符：
-  + 读取下一个字符。如果指定了一个不为 1 的宽度 width，函数会读取 width 个字符，并通过参数传递，把它们存储在数组中连续位置。在末尾不会追加空字符。
-  + char *
-
-+ `%d`     : 十进制整数：数字前面的 + 或 - 号是可选的。 -- `int *`
-+ `%e`     : 使用`e`字符的科学计数法（尾数和指数）
-+ `%E`     : 使用`E`字符的科学计数法（尾数和指数）
-+ `%f`     : 十进制浮点数  --  `float *`
-+ `%g`     : 自动选择`%e`或`%f`中合适的表示法
-+ `%G`     : 自动选择`%E`或`%f`中合适的表示法
-+ `%o`     : 有符号八进制  --  `int *`
-+ `%s`     : 字符的字符串,这将读取连续字符，直到遇到一个空格字符（空格字符可以是空白、换行和制表符）。  --  `char *`
-+ `%u`     : 无符号十进制整数  --  `unsigned int *`
-+ `%x`     : 无符号十六进制整数
-+ `%X`     : 无符号十六进制整数（大写字母）
-+ `%p`     : 指针地址，	读入一个指针 。
-+ `%[]`    : 无输出
-+ `%%`     : 读 % 符号。
-
-### C++中
+## 字符串 -- C++
 
 + 字符串是存储在内存的连续字节中的一系列字符
 
@@ -82,16 +59,39 @@
   + 类设计让程序能够自动处理`string`的大小。这使得与使用数组相比，使用`string`对象更方便，也更安全。
   + 从理论上来说，可以将`char`数组视为**一组用于存储一个字符串的`char`存储单元**，而`string`类变量是**一个表示字符串的实体**。
 
-## 数组
 
-### C语言中
+## 类型说明符(占位符)
 
++ `%a, %A` : 读入一个浮点值(仅 C99 有效)  --  `	float *`
++ `%c`     : 单个字符：
+  + 读取下一个字符。如果指定了一个不为 1 的宽度 width，函数会读取 width 个字符，并通过参数传递，把它们存储在数组中连续位置。在末尾不会追加空字符。
+  + char *
+
++ `%d`     : 十进制整数：数字前面的 + 或 - 号是可选的。 -- `int *`
++ `%e`     : 使用`e`字符的科学计数法（尾数和指数）
++ `%E`     : 使用`E`字符的科学计数法（尾数和指数）
++ `%f`     : 十进制浮点数  --  `float *`
++ `%g`     : 自动选择`%e`或`%f`中合适的表示法
++ `%G`     : 自动选择`%E`或`%f`中合适的表示法
++ `%o`     : 有符号八进制  --  `int *`
++ `%s`     : 字符的字符串,这将读取连续字符，直到遇到一个空格字符（空格字符可以是空白、换行和制表符）。  --  `char *`
++ `%u`     : 无符号十进制整数  --  `unsigned int *`
++ `%x`     : 无符号十六进制整数
++ `%X`     : 无符号十六进制整数（大写字母）
++ `%p`     : 指针地址，	读入一个指针 。
++ `%[]`    : 无输出
++ `%%`     : 读 % 符号。
+
+## 数组  - C语言
+
++ 假设有类型T，`T[size]`的含义是：包含`size`个`T`类型的元素的数组，元素的索引值范围是`0`到`size-1`
+  
 + 数组用于存储相同类型的数据。
 + C把数组看作是**派生类型**，因为数组是建立在其他类型的基础上。
 + 也就是说，无法简单地声明一个数组。在声明数组时必须说明其**元素的类型**，例如:`int`类型的数组，`float`类型的数组或者其他类型的数组。
   - 所谓的其他类型也可以是数据类型，这种情况下，创建的是数组的数组，或者称为二维数组
 
-## **指针**
+## 指针
 
 ### 指针与数组
 
@@ -122,7 +122,47 @@
     + 编译器执行这行代码便创建了一个结构变量`library`。编译器使用 `book` 模板为该变量分配空间：一个内含`MAXTITLE`个元素的`char`数组，一个内含`MAXAUTL`个元素的`char`数组和一个`float`类型的变量。这些存储空间都与一个名称`library`结合在一起。
     + 在结构变量的声明中，`struct book`所起的作用相当于一般声明中的`int`或`float`。例如，可以定义两个`struct book`类型的变量，或者甚至是指向`struct book`类型结构的指针。
 
-## static
+## 动态内存 new/malloc delete/free
+
++ C++ 程序中的内存分为两个部分
+  + 栈：在函数内部声明的所有变量都将占用栈内存。
+  + 堆：这是程序中未使用的内存，在程序运行时可用于动态分配内存。
+
++ 很多时候，您无法提前预知需要多少内存来存储某个定义变量中的特定信息，所需内存的大小需要在运行时才能确定
++ 在 C++ 中，您可以使用特殊的运算符为给定类型的变量在运行时分配堆内的内存，这会返回所分配的空间地址。这种运算符即 ``new`` 运算符。
++ 如果您不再需要动态分配的内存空间，可以使用 `delete` 运算符，删除之前由 `new` 运算符分配的内存
+
+### new 和 delete 运算符
+
++ 使用 new 运算符来为任意的数据类型动态分配内存的通用语法：
+  + `new data-type;`
++ 在这里，`data-type` 可以是包括数组在内的任意内置的数据类型，也可以是包括类或结构在内的用户自定义的任何数据类型。
++ 内置的数据类型:
+  + `double* pvalue = NULL; // 初始化null的指针`
+  + `pvalue = new double;   // 为变量请求内存`
+
++ 如果自由存储区已被用完，可能无法成功分配内存。所以建议检查 new 运算符是否返回 NULL 指针，并采取以下适当的操作：
+  + `double* pvalue = NULL;`
+  + `if(!(pvalue = new double)) {std::cout << "Error: out of memory ">> std::endl; exit(1);}`
+
++ malloc() 函数在 C 语言中就出现了，在 C++ 中仍然存在，但建议尽量不要使用 malloc() 函数。
++ new 与 malloc() 函数相比，其**主要的优点是**，new 不只是分配了内存，它还创建了对象
+
++ 在任何时候，当您觉得某个已经动态分配内存的变量不再需要使用时，您可以使用 delete 操作符释放它所占用的内存，如下所示：
+  + `delete pvalue;  // 释放pvalue所指向的内存`
+
+### 数组的动态内存分配
+
++ `char *pvalue = NULL;  // 初始化NULL指针`
++ `pvalue = new char[20];// 位变量请求内存`
+
++ `delete [] pvalue;  // 删除pvalue所指向的数组`
+
+### 对象的动态内存分配
+
++ 对象与简单的数据类型没有什么不同
+
+## static 关键字
 
 + `static`是C/C++中常见的修饰符，它被用来控制**变量的存储方式和可见性**。
 + `static`的引入
@@ -197,7 +237,7 @@
 + 静态资源属于类，但是是独立于类存在的。从类的加载机制的角度来看，**静态资源是类初始化的时候加载的**，而**非静态资源是类实例化对象的时候加载的**。
 + 类的初始化早于类实例化对象。所以对于静态资源来说，它是不可能知道一个类中有那些非静态资源的；但是对于非静态资源来说就不一样了，由于它是实例化对象出来之后产生的，因此属于类的这些东西它都能认识
 
-### 总结
+### static 总结
 
 + 静态成员函数中不能调用非静态成员
 + 非静态成员函数中可以调用静态成员。因为静态成员属于类本身，在类的对象产生之前就已经存在了，所以在非静态成员函数中是可以调用静态成员的
@@ -345,15 +385,11 @@
 + 但是，并非所有未命名的具体数值都是魔术数字。
 + 一般而言，只要数字能让人一眼明白其含义，并且基本没有需要改变的可能，就不会被认为是魔术数字
 
-## 数组
-
-+ 假设有类型T，`T[size]`的含义是：包含`size`个`T`类型的元素的数组，元素的索引值范围是`0`到`size-1`
-
 ## 结构， 联合与枚举
 
 + 这些类型在C++的早期版本就已经存在了，它们主要关注数据如何表示的问题，构成了大多数C程序的基本框架。这里描述的`struct`其实是一种简单的`class`
 
-### 结构(struct)
+## 结构(struct)
 
 + 结构(`struct`), 是由任意类型元素（即成员，`member`）构成的序列
 + 在`struct`的对象中，成员按照声明的顺序依次存放。在内存中为成员分配空间时，顺序与声明结构的时候保持一致。
@@ -363,16 +399,40 @@
 
 + 类型等价：对于两个`struct`来说，即使它们的成员相同，它们本身仍是不同的类型。`struct`本身的类型与其成员的类型不能混为一谈。在程序中，每个`struct`只能有唯一的定义。
 
-### 联合(union)
+## 联合(union)
 
 + 联合(`union`)，是一种`struct`，同一时刻只保存一个元素的值
 + `union`是一种特殊的`struct`，它的所有成员都分配在同一个地址空间上。因此，一个`union`实际占用的空间大小与其最大的成员一样。自然地，在同一时刻`union`只能保存一个成员的值
 
-### 枚举(enum)
+## 枚举(enum)
 
 + 枚举(`enum`), 是包含一组命名常量（称为枚举值）的类型
++ 枚举类型(enumeration)是 C++ 中的一种派生数据类型，它是由用户定义的若干枚举常量的集合。
 
-### 限定作用域的枚举类型 (enum class)
++ 格式说明
+  + 关键字enum——指明其后的标识符是一个枚举类型的名字。
+  + 枚举常量表——由枚举常量构成。"枚举常量"或称"枚举成员"，是以标识符形式表示的整型量，表示枚举类型的取值。
+  + 枚举常量表列出枚举类型的所有取值，各枚举常量之间以"，"间隔，且必须各不相同。取值类型与条件表达式相同
+
++ 注意：
+  + 枚举常量代表该枚举类型的变量可能取的值，编译系统为每个枚举常量指定一个整数值，
+  + 默认状态下，这个整数就是所列举元素的序号，序号从0开始
+  +  可以在定义枚举类型时为部分或全部枚举常量指定整数值，在指定值之前的枚举常量仍按默认方式取值，而指定值之后的枚举常量按依次加1的原则取值。 
+  +  **各枚举常量的值可以重复**
+
++ 枚举常量只能以标识符形式表示，而不能是整型、字符型等文字常量。
++ 例如，以下定义非法：
+  + `enum letter_set {'a','d','F','s','T'}; //枚举常量不能是字符常量`
+  + `enum year_set{2000,2001,2002,2003,2004,2005}; //枚举常量不能是整型常量`
++ 可改为以下形式则定义合法：
+  + `enum letter_set {a, d, F, s, T};`
+  + `enum year_set{y2000, y2001, y2002, y2003, y2004, y2005};`
+
++ 使用：
+  + 定义枚举类型的主要目的是：增加程序的可读性
+  + 枚举类型最常见也最有意义的用处之一就是**用来描述状态量**，
+
+## 限定作用域的枚举类型 (enum class)
 
 + 限定作用域的枚举类型(`enum class`), 是一种`enum`， 枚举值位于枚举类型的作用域内，不存在向其他类型的隐式类型转换
 + `enum class`是一种限定了作用域的强类型枚举，例如
@@ -762,7 +822,46 @@
 + 由于这个特性，它完成有可能在我们处理一对一数据的时候，在编程上提供快速通道。
 + `Map` 内部数据的组织，其内部自建一颗红黑树（一种非严格意义上的平衡二叉树），这棵树具有对数据自动排序的功能，所以在`Map`内部所有的数据都是有序的。
 
-## 模板类vector
+## 模板类`array`
+
++ `vector`类的功能比数组强大，但**付出的代价是效率稍低**。
++ 如果需要的是长度固定的数组，使用数组是更佳的选择，但代价是不那么方便和安全。
+
++ 有鉴于此，C++11新增了模板类`array`，它也位于名称空间`std`中。
++ 与数组一样，`array`对象的长度也是固定的，也使用栈（静态内存分配），而不是自由存储区，因此其效率与数组相同，但更方便和安全。
++ 要创建`array`对象，需要包含头文件`array`
++ 创建一个名为`arr`的`array`对象，它包含`n_elem`个类型为`typename`的元素：
+  - `array<typeName, n_elem> arr;`
++ 与创建`vector`对象不同的是，`n_elem`不能是变量
+
++ **方法**
+  + `std::array::fill`
+    - 功能：把数组的所有元素都设置为val
+    - 函数原型:`void fill(const value_type& val);`
+  + `std::array::at`
+    - 功能：返回数组中第n个位置的元素的引用。返回数组中指定位置的元素
+    - 函数原型：`reference at(size_type n);const_reference at(size_type n) const;`
+
+## 容器
+
++ 容器（`container`）
+  - 容器是指一个包含若干元素的对象，因为`Vector`的对象都是容器，所以我们称`Vector`是一种容器类型。
+  - 如果**一个类的主要目的是保存一些对象**，那么我们通常称之为容器。
+
++ 容器（`container`），是指一个包含若干元素的对象，因为`Vector`的对象都是容器，所以我们称`Vector`是一种容器类型。
++ 如果一个类的主要目的是保存一些对象，那么我们通常称之为容器。
+
++ `Vector`的构造函数使用`new`运算符从自由存储（也称堆或动态存储）分配一些内存空间，析构函数则使用`delete`运算符释放该空间以达到清理资源的目的。这一切都无需`Vector`的使用者干预
++ 构造函数负责分配元素空间并正确地初始化`Vector`成员，析构函数则负责释放空间。这就是所谓的**数据句柄模型（handle-to-data model）**，常用来管理在对象声明周期中大小会发生变化的数据
++ 和所有标准库容器一样，`vector`也是元素类型为T的容器，即`vector<T>`。几乎任意一种数据类型都可以作为容器的元素类型
++ 在构造函数中请求资源，然后在析构函数中释放它们的技术称为**资源获取即初始化(Resource Acquisition Is Initialzation)**，简称RAII，它使得我们得以规避“裸`new`操作”的风险。同时，也应该避免“裸`delete`操作”
+
+### 二维容器
+
++ `vector`**不能容纳对象引用作为其元素**，因为引用不是一个对象。
++ 在`C++11`中，二维容器的定义可以写成`vector<vector<int > >`
+
+### 向量 vector
 
 + 模板类`vector`和`array`是数组的替代品
 + 模板类`vector`类似于`string`类，也是一种动态数组。可以在运行阶段设置`vector`对象的长度，可在末尾附加新数据，还可在中间插入新数据。
@@ -805,52 +904,108 @@
   17. `empty`   ：判断`vector`是否为空
   18. `swap`    ：与另一个`vector`交换数据
 
-### `vector::data`
++ `vector::data`
+  + 返回指向向量内部用于存储其拥有的元素的内存数组的直接指针。
+  + 因为向量中的元素保证以与向量表示的相同顺序存储在连续的存储位置中，所以检索到的指针可以偏移以访问数组中的任何元素。
+  + 返回值：指向向量内部使用的数组中第一个元素的指针。
+    - 如果向量对象是`const`限定的，则该函数返回一个指向`const value_type`的指针。
+    - 否则，它返回指向`value_type`的指针。
 
-+ 返回指向向量内部用于存储其拥有的元素的内存数组的直接指针。
-+ 因为向量中的元素保证以与向量表示的相同顺序存储在连续的存储位置中，所以检索到的指针可以偏移以访问数组中的任何元素。
-+ 返回值：指向向量内部使用的数组中第一个元素的指针。
-  - 如果向量对象是`const`限定的，则该函数返回一个指向`const value_type`的指针。
-  - 否则，它返回指向`value_type`的指针。
+### 元组 tuple
 
-## 模板类`array`
++ 简介：
+  + `tuple`是一个固定大小的不同类型值的集合，是泛化的`std::pair`。
+  + 可以把他当做一个通用的结构体来用，不需要创建结构体又获取结构体的特征，在某些情况下可以取代结构体使程序更加简洁，直观。
+  + `std::tuple`理论上可以有无数个任意类型的成员变量，而`std::pair`只能是2个成员，因此在需要保存3个及以上的数据时就需要使用`tuple`元组
 
-+ `vector`类的功能比数组强大，但**付出的代价是效率稍低**。
-+ 如果需要的是长度固定的数组，使用数组是更佳的选择，但代价是不那么方便和安全。
++ `template <class... Types> class tuple;`
++ 元组是能够保存元素集合的对象。每个元素可以是不同的类型
++ 模板参数：
+  + `Types...` -- 用于元素的类型列表，其顺序与它们在元组中的排序顺序相同
 
-+ 有鉴于此，C++11新增了模板类`array`，它也位于名称空间`std`中。
-+ 与数组一样，`array`对象的长度也是固定的，也使用栈（静态内存分配），而不是自由存储区，因此其效率与数组相同，但更方便和安全。
-+ 要创建`array`对象，需要包含头文件`array`
-+ 创建一个名为`arr`的`array`对象，它包含`n_elem`个类型为`typename`的元素：
-  - `array<typeName, n_elem> arr;`
-+ 与创建`vector`对象不同的是，`n_elem`不能是变量
+### 数据对 pair
 
-+ **方法**
-  + `std::array::fill`
-    - 功能：把数组的所有元素都设置为val
-    - 函数原型:`void fill(const value_type& val);`
-  + `std::array::at`
-    - 功能：返回数组中第n个位置的元素的引用。返回数组中指定位置的元素
-    - 函数原型：`reference at(size_type n);const_reference at(size_type n) const;`
++ 功能： `pair` 将一对值组合成一个值,这一对值可以具有不同的数据类型（T1和T2）,两个值可以分别用pair的两个公有函数first和second访问。
++ 类模块：`template<class T1,class T2> struct pair`
++ 参数：
+  + T1  --  第一个值的数据类型
+  + T2  --  第二个值的数据类型
++ 需求：
+  + 头文件:`#include <utility>   // std::pair, std::make_pair`
 
-## 容器
++ `for(auto &tmp : m_data)`  --  iterating for loop
++ 基于循环的范围是在C++11标准中添加的，是其传统等效物的一种更紧凑的形式。基于循环的范围用于从头到尾迭代容器的元素
+  + The range based for loop is added in C++11 standard and is a more compact form of its traditional equivalent. The range based for loop is used to iterate over elements of a container from beginning to end.
 
-+ 容器（`container`）
-  - 容器是指一个包含若干元素的对象，因为`Vector`的对象都是容器，所以我们称`Vector`是一种容器类型。
-  - 如果**一个类的主要目的是保存一些对象**，那么我们通常称之为容器。
++ Syntax: `for(range-declaration : range-expression) loop statement`
+  + `range-declaration`  --  it is declaration of a variable of type same as the type of elements of range-expression. Often the auto keyword is used to automatically identify the type of elements in range-expression.
+  + `range-expression`   --  any expression used to represent a sequence of elements. Also Sequence of elements in braces can be used.
+  + `loop-statement`     --  body of for loop that contains one or more statements that are to be executed repeatedly till the end of range-expression
 
-+ 容器（`container`），是指一个包含若干元素的对象，因为`Vector`的对象都是容器，所以我们称`Vector`是一种容器类型。
-+ 如果一个类的主要目的是保存一些对象，那么我们通常称之为容器。
+### 映射 map
 
-+ `Vector`的构造函数使用`new`运算符从自由存储（也称堆或动态存储）分配一些内存空间，析构函数则使用`delete`运算符释放该空间以达到清理资源的目的。这一切都无需`Vector`的使用者干预
-+ 构造函数负责分配元素空间并正确地初始化`Vector`成员，析构函数则负责释放空间。这就是所谓的**数据句柄模型（handle-to-data model）**，常用来管理在对象声明周期中大小会发生变化的数据
-+ 和所有标准库容器一样，`vector`也是元素类型为T的容器，即`vector<T>`。几乎任意一种数据类型都可以作为容器的元素类型
-+ 在构造函数中请求资源，然后在析构函数中释放它们的技术称为**资源获取即初始化(Resource Acquisition Is Initialzation)**，简称RAII，它使得我们得以规避“裸`new`操作”的风险。同时，也应该避免“裸`delete`操作”
++ 容器map，是键-值对的集合。
++ 容器map类型通常可以理解为关联数组(associative array)，可以使用键作为下标来获取对应的值，正如内置数组类型一样
++ 而关联的本质在于**元素的值与某个特定的键相关联**，而不是通过在数组中的位置来获取
 
-## 二维容器
++ map是由多对的键值组成的排序结构体，键值独一无二
++ 容器类型`multimap`和容器类型map基本是一致的，只是multimap允许重复元素，而map不允许
 
-+ `vector`**不能容纳对象引用作为其元素**，因为引用不是一个对象。
-+ 在`C++11`中，二维容器的定义可以写成`vector<vector<int > >`
++ 简介：
+  + map内部数据的组织，map内部自建一颗红黑树(一 种非严格意义上的平衡二叉树)，这颗树具有对数据自动排序的功能，所以在map内部所有的数据都是有序的
+  + map的特点是增加和删除节点对迭代器的影响很小，除了那个操作节点，对其他的节点都没有什么影响
+  + 对于迭代器来说，可以修改实值，而不能修改key
+
++ 功能：
+  + 根据key值快速查找记录，查找的复杂度基本是Log(N)，如果有1000个记录，最多查找10次（2^10)，1,000,000个记录，最多查找20次
+  + 快速插入Key -Value 记录
+  + 快速删除记录
+  + 根据Key 修改value记录
+  + 遍历所有记录
+
++ 使用：
+  + `#include <map>  //注意，STL头文件没有扩展名.h`
+  + map对象是模板类，需要关键字和存储对象两个模板参数：
+    + `std:map<int,string> personnel;`
+    + 这样就定义了一个用int作为索引,并拥有相关联的指向string的指针
+
++ 对应的迭代器
+  + first  --  键
+  + second --  键值
+
+#### map的容量
+
++ 在map和multimap中，定义了两个成员函数`size()`和`max_size()`，用来确定map和multimap的数据成员的数量
++ 函数的语法
+  + `size_type size() const;`
+  + `size_type max_size() const;`
+
+#### map 和 multimap 成员函数
+
++ 判断空函数 : `bool empty() const;`
+  + 如果为空，返回true
+
++ 遍历容器 : `begin(), end(), rbegin(), rend()`
+  + 容器map和multimap不支持元素直接存取，元素的存取需要经过迭代器实现，并且map和multimap的迭代器均是双向迭代器
+  + `
+
+### queue 队列
+
++ 只能访问 queue<T> 容器适配器的第一个和最后一个元素。只能在容器的末尾添加新元素，只能从头部移除元素。
+
++ 对于任何需要用 FIFO 准则处理的序列来说，使用 queue 容器适配器都是好的选择。
+
+#### queue 操作
+
++ `front()`：返回 queue 中第一个元素的引用。如果 queue 是常量，就返回一个常引用；如果 queue 为空，返回值是未定义的。
++ `back()`：返回 queue 中最后一个元素的引用。如果 queue 是常量，就返回一个常引用；如果 queue 为空，返回值是未定义的。
++ `push(const T& obj)`：在 queue 的尾部添加一个元素的副本。这是通过调用底层容器的成员函数 push_back() 来完成的。
++ `push(T&& obj)`：以移动的方式在 queue 的尾部添加元素。这是通过调用底层容器的具有右值引用参数的成员函数 push_back() 来完成的。
++ `pop()`：删除 queue 中的第一个元素。
++ `size()`：返回 queue 中元素的个数。
++ `empty()`：如果 queue 中没有元素的话，返回 true。
++ `emplace()`：用传给 emplace() 的参数调用 T 的构造函数，在 queue 的尾部生成对象
++ `swap(queue<T> &other_q)`：将当前 queue 中的元素和参数 queue 中的元素交换。它们需要包含相同类型的元素。也可以调用全局函数模板 swap() 来完成同样的操作。
 
 ## 迭代器
 
