--- a/CPP/C-C++03.md
+++ b/CPP/C-C++03.md
@@ -1,3 +1,13 @@
+## daemon()
+
++ 功能：将程序置于后台，并与控制终端分离
++ 原型：`int daemon(int nochdir, int noclose);`
++ 参数：
+  + `nochdir`  --  如果为0，执行`chdir ("/")`
+  + `noclose`  --  如果为0，将`stdin, stdout, stderr`重定向到`/dev/null`
++ 返回值：
+  + 
+
 ## strchr()
 
 + 功能：在参数 `str` 所指向的字符串中搜索最后一次出现字符 `c`（一个无符号字符）的位置
@@ -128,6 +138,89 @@
 + 返回值：
   + 成功  --
   + 失败  --
+
+## pthread_sigmask()
+
++ 功能：修改，控制调用线程的信号掩码
++ 原型：`int pthread_sigmask(int how, const sigset_t *newmask, sigset_t *oldmask);`
++ 参数：
+  + `how`  --  
+    + `SIG_BLOCK`  ：结果集是当前集合参数集的并集， 
+    + `SIG_UNBLOCK`：结果集是当前集合参数集的差集， 
+    + `SIG_SETMASK`：结果集是由参数集指向的集
+  + `newmask`
+  + `oldmask`
++ 返回值：
+  + 成功  -- 0
+  + 失败  -- -1，并设置errno
++ 需求：
+  + 头文件：`#include <signal.h>`
+
+## pthread_create()
+
++ 功能：创建一个新的线程，并让它可执行
++ 原型：`int pthread_create(pthread_t *newthread, const pthread_attr_t attr, void *(*start_routine)(void *), void *arg);`
++ 参数：
+  + `newthread`  --  存储新线程的句柄，指向线程标识符指针
+  + `attr` --  设置线程属性
+  + `start_routine` -- 线程运行函数的起始地址
+  + `arg`  --  运行函数的参数
++ 返回值：
+  + 线程创建成功  --  0
+  + 线程创建失败  --  返回出错编号，并且*thread中的内容是未定义的
++ 需求：
+  + 头文件：`#include <pthread>`
++ 注意：
+  + 返回成功时，由`newthread`指向的内存单元被设置为新创建线程的线程ID
+  + attr参数用于指定各种不同的线程属性
+  + 新创建的线程从`start_routine`函数的地址开始运行，该函数只有一个万能指针参数`arg`
+  + 如果需要向`start_routine`函数传递的参数不止一个，那么需要把这些参数放到一个结构中，然后把这个结构的地址作为arg的参数传入
+  + linux下用C语言开发多线程程序，Linux系统下的多线程遵循POSIX线程接口，称为pthread
+
+## pthread_join()
+
++ 功能：子线程合入主线程，主线程阻塞等待子线程结束，然后回收子线程资源。
++ 原型：`int pthread_join(pthread_t thread, void **retval);`
++ 参数：
+  + `thread`  --  线程标识符，即线程ID，标识唯一的线程
+  + `retval`  --  用户定义的指针，用来存储被等待线程的返回值
++ 返回值：
+  + 成功  --  0
+  + 失败  --  其他值
++ 需求：
+  + 头文件：`#include <pthread>`
++ 注意：
+  + pthread_join()函数，以阻塞的方式等待thread指定的线程结束。
+  + 当函数返回时，被等待线程的资源被收回。
+  + 如果线程已经结束，那么该函数会立即返回。并且thread指定的线程必须是joinable的。
+
+## pthread_detach()
+
++ 功能：指示线程`th`永远不会与`PTHREAD_JOIN`连接。因此，`th`的资源将在它终止时立即被释放，而不是等待另一个线程对它执行`PTHREAD_JOIN`。
+  + 主线程与子线程分离，子线程结束后，资源自动回收。
++ 原型：`int pthread_detach(pthread_t th);`
++ 参数：
+  + `th`  --  线程标识符，指向需要自动释放的线程
++ 返回值：
+  + 成功  --  0
+  + 失败  --  其他情况
++ 需求：
+  + 头文件：`#include <pthread>`
++ 注意：
+
+## pthread 两种状态 
+
++ `pthread`有两种状态`joinable`状态和`unjoinable`状态
+
++ 如果线程是`joinable`状态，当线程函数自己返回退出时或`pthread_exit`时都不会释放线程所占用堆栈和线程描述符（总计8K多）
++ 只有当你调用了`pthread_join`之后这些资源才会被释放
+
++ 若是`unjoinable`状态的线程，这些资源在线程函数退出时或`pthread_exit`时自动会被释放
++ `unjoinable`属性可以在`pthread_create`时指定，或在线程创建后在线程中`pthread_detach`自己
+
++ `pthread_detach(pthread_self());`
+  + 将状态改为`unjoinable`状态，确保资源的释放。或者将线程置为 `joinable`,然后适时调用`pthread_join`.
+  + 简单的说就是在线程函数头加上 `pthread_detach(pthread_self())`的话，线程状态改变，**在函数尾部直接 `pthread_exit` 线程就会自动退出**。省去了给线程擦屁股的麻烦
 
 ## _exit()
 
@@ -352,6 +445,46 @@
   + 头文件：`#include <unistd.h>`
 + 注意：
   + 换句话来说，path2就是新创建的链接，而新链接指向path1
+
+## sigset_t 信号集
+
++ 信号集被定义为一种数据类型：
+  + `typedef struct {unsigned long sig[_NSIG_WORDS];} sigset_t;`
++ 信号集用来描述信号的集合，每个信号占用一位（64位）。
++ Linux所支持的所有信号可以全部或部分的出现在信号集中，主要与信号阻塞相关函数配合使用
+
+### 信号集操作定义的相关函数：
+
++ `int sigemptyset(sigset_t *set);`  初始化由`set`指定的信号集，信号集里面的所有信号被清空，相当于`64`为置`0`；
+
++ `int sigfillset(sigset_t *set);`   调用该函数后，`set`指向的信号集中将包含`linux`支持的`64`种信号，相当于`64`为都置`1`；
+
++ `int sigaddset(sigset_t *set, int signum);`在`set`指向的信号集中加入`signum`信号，相当于将给定信号所对应的位置`1`；
+  
++ `int sigdelset(sigset_t *set, int signum);`在`set`指向的信号集中删除`signum`信号，相当于将给定信号所对应的位置`0`；
+
++ `int sigismember(const sigset_t *set, int signum);`判定信号`signum`是否在`set`指向的信号集中，相当于检查给定信号所对应的位是`0`还是`1`。
+
+### 信号处理
+
++ 信号是内核提供的向用户态进程发送信息的机制, 
++ 常见的有使用`SIGUSR1`唤醒用户进程执行子程序或发生段错误时使用`SIGSEGV`保存用户错误现场.
+
+## sigwait()
+
++ 功能：从`set`中选择任何挂起的信号或等待任何一个信号到达
++ 原型：`int sigwait(const sigset_t *set, int sig);`
++ 参数：
+  + `set`  --  信号集
+  + `sig`  --  
++ 返回值：
+  + 成功  --  
+  + 失败  --  
++ 需求：
+  + 头文件：`#include <signal.h>`
++ 注意：
+  + sigwait是同步的等待信号的到来，而不是像进程中那样是异步的等待信号的到来
+  + sigwait函数使用一个信号集作为他的参数，并且在集合中的任一个信号发生时返回该信号值，解除阻塞，然后可以针对该信号进行一些相应的处理。
 
 ## C++类的构造函数后加冒号
 
@@ -682,3 +815,51 @@
   + `[this]`  --  **表示以值传递的方式导入当前的 this 指针**
 + **注意**:
   + 单个外部变量不允许以相同的传递方式导入多次。例如 `[=，val1]` 中，val1 先后被以值传递的方式导入了 2 次，这是非法的
+
+## const 小结
+
++ const 是constant的缩写，本意是不变的，不易改变的意思。
++ const 在C++中是用来修饰内置类型变量，自定义对象，成员函数，返回值，函数参数
+
+### const修饰普通类型的变量
+
++ 对于const变量a，我们取变量的地址并转换赋值给 指向int的指针，然后利用*p = 8
++ Volatile关键字跟const对应相反，是易变的，容易改变的意思。所以不会被编译器优化，编译器也就不会改变对a变量的操作。
+
+### const 修饰指针变量
+
++ const 修饰指针变量有以下三种情况
+  + const 修饰指针指向的内容，则内容为不可变量。
+  + const 修饰指针，则指针为不可变量。
+  + const 修饰指针和指针指向的内容，则指针和指针指向的内容都为不可变量。
+
++ `const int *p = 8;`
+  + 则指针指向的内容8不可改变。简称左定值，因为const位于*号的左边。
+
++ `int* const p = &a;`
+  + 对于const指针p其指向的内存地址不能够被改变，但其内容可以改变。简称，右定向。因为const位于*号的右边。
+
++ `const int * const  p = &a;`
+  + 这时，const p的指向的内容和指向的内存地址都已固定，不可改变。
+
+### const参数传递和函数返回值
+
++ 对于const修饰函数参数可以分为三种情况
+  + 值传递的const修饰传递，一般这种情况不需要const修饰，因为函数会自动产生临时变量复制实参值。
+  + 当const参数为指针时，可以防止指针被意外篡改。
+  + 自定义类型的参数传递，需要临时对象复制参数，对于临时对象的构造，需要调用构造函数，比较浪费时间，因此我们采取const外加引用传递的方法。并且对于一般的int ，double等内置类型，我们不采用引用的传递方式。
+
++ Const修饰返回值分三种情况
+  + const修饰内置类型的返回值，修饰与不修饰返回值作用一样。
+  + const 修饰自定义类型的作为返回值，此时返回的值不能作为左值使用，既不能被赋值，也不能被修改。
+  + const 修饰返回的指针或者引用，是否返回一个指向const的指针，取决于我们想让用户干什么。
+
+### const修饰类成员函数
+
++ const 修饰类成员函数，其目的是防止成员函数修改被调用对象的值，如果我们不想修改一个调用对象的值，所有的成员函数都应当声明为const成员函数。
++ 注意：
+  + const关键字不能与static关键字同时使用，因为static关键字修饰静态成员函数，静态成员函数不含有this指针，即不能实例化，const成员函数必须具体到某一实例
+
++ 如果有个成员函数想修改对象中的某一个成员怎么办？
+  + 这时我们可以使用`mutable`关键字修饰这个成员，
+  + `mutable`的意思也是易变的，容易改变的意思，被`mutable`关键字修饰的成员可以处于不断变化中
