--- a/CPP/C-C++02.md
+++ b/CPP/C-C++02.md
@@ -220,6 +220,22 @@
 + 需求：
   + 头文件：`#include <time.h>`
 
+## getline()
+
++ 功能：从打开的文件流中按行读取，将保存行字符的缓冲区地址保存到`*line_ptr`
++ 原型：`size_t getline(char **lineptr, size_t *n, FILE *stream);`
++ 参数：
+  + `lineptr`  --  保存读取的字符的缓冲区
+  + `n`        
+  + `stream`   --  使用`fopen`打开的文件句柄
++ 返回值：
+  + 成功  --  存储在缓冲区中的字符数，也就是读取的字符数
+  + 失败  --  -1
++ 需求
+  + 头文件：`#include <stdio.h>`
++ 注意：
+  + `lineptr`，如果在调用函数之前被置为 `NULl`，则在函数执行过程中会自动申请内存资源，所以需要在调用失败时，手动释放`lineptr`指向的内存资源
+
 ## getdelim()
 
 + 功能：
@@ -443,7 +459,6 @@
 + 注意：
   + 当读取 (n-1) 个字符时，或者读取到换行符时，或者到达文件末尾时，它会停止，具体视情况而定
 
-## getline()
 
 ## rewind()
 
@@ -973,18 +988,6 @@
   + 这跟不用new声明对象有很大区别：类指针可以先行定义，但是类指针只是一个通用指针，在`new`之前并未对该类对象分配任何内存空间。
   + 使用普通方式创建的类对象，在创建之初就已经分配了内存空间，而类指针，如果没有经过对象初始化，则不需要`delete`释放
 
-## tuple,元组
-
-+ 简介：
-  + `tuple`是一个固定大小的不同类型值的集合，是泛化的`std::pair`。
-  + 可以把他当做一个通用的结构体来用，不需要创建结构体又获取结构体的特征，在某些情况下可以取代结构体使程序更加简洁，直观。
-  + `std::tuple`理论上可以有无数个任意类型的成员变量，而`std::pair`只能是2个成员，因此在需要保存3个及以上的数据时就需要使用`tuple`元组
-
-+ `template <class... Types> class tuple;`
-+ 元组是能够保存元素集合的对象。每个元素可以是不同的类型
-+ 模板参数：
-  + `Types...` -- 用于元素的类型列表，其顺序与它们在元组中的排序顺序相同
-
 ## 类和动态内存分配
 
 + C++如何增加内存负载？
@@ -1082,49 +1085,6 @@
     + `(*pFunc)(110);`
   + 以后其他地方的程序需要声明类似的函数指针，只需要使用：`PrintHelloHandle pFuncOther;`
 
-## pair
-
-+ 功能： `pair` 将一对值组合成一个值,这一对值可以具有不同的数据类型（T1和T2）,两个值可以分别用pair的两个公有函数first和second访问。
-+ 类模块：`template<class T1,class T2> struct pair`
-+ 参数：
-  + T1  --  第一个值的数据类型
-  + T2  --  第二个值的数据类型
-+ 需求：
-  + 头文件:`#include <utility>   // std::pair, std::make_pair`
-
-## `for(auto &tmp : m_data)`  --  iterating for loop
-
-+ 基于循环的范围是在C++11标准中添加的，是其传统等效物的一种更紧凑的形式。基于循环的范围用于从头到尾迭代容器的元素
-  + The range based for loop is added in C++11 standard and is a more compact form of its traditional equivalent. The range based for loop is used to iterate over elements of a container from beginning to end.
-
-+ Syntax: `for(range-declaration : range-expression) loop statement`
-  + `range-declaration`  --  it is declaration of a variable of type same as the type of elements of range-expression. Often the auto keyword is used to automatically identify the type of elements in range-expression.
-  + `range-expression`   --  any expression used to represent a sequence of elements. Also Sequence of elements in braces can be used.
-  + `loop-statement`     --  body of for loop that contains one or more statements that are to be executed repeatedly till the end of range-expression
-
-## map 
-
-+ 简介：
-  + map内部数据的组织，map内部自建一颗红黑树(一 种非严格意义上的平衡二叉树)，这颗树具有对数据自动排序的功能，所以在map内部所有的数据都是有序的
-  + map的特点是增加和删除节点对迭代器的影响很小，除了那个操作节点，对其他的节点都没有什么影响
-  + 对于迭代器来说，可以修改实值，而不能修改key
-
-+ 功能：
-  + 根据key值快速查找记录，查找的复杂度基本是Log(N)，如果有1000个记录，最多查找10次（2^10)，1,000,000个记录，最多查找20次
-  + 快速插入Key -Value 记录
-  + 快速删除记录
-  + 根据Key 修改value记录
-  + 遍历所有记录
-
-+ 使用：
-  + `#include <map>  //注意，STL头文件没有扩展名.h`
-  + map对象是模板类，需要关键字和存储对象两个模板参数：
-    + `std:map<int,string> personnel;`
-    + 这样就定义了一个用int作为索引,并拥有相关联的指向string的指针
-
-+ 对应的迭代器
-  + first  --  键
-  + second --  键值
 
 ## 概述
 
