--- a/CPP/C-C++02.md
+++ b/CPP/C-C++02.md
@@ -408,6 +408,19 @@
   + 成功  -- 返回一个 size_t 对象，表示元素的总数，该对象是一个整型数据类型
   + 失败  -- 返回一个错误
 
+## fprintf()
+
++ 功能：发送格式化输出到流 stream 中
++ 原型：`int fprintf(FILE *stream, const char *format, ...);`
++ 参数：
+  + stream -- 这是指向 FILE 对象的指针，该 FILE 对象标识了流。
+  + format -- 这是 C 字符串，包含了要被写入到流 stream 中的文本。
+    + 它可以包含嵌入的 format 标签，format 标签可被随后的附加参数中指定的值替换，并按需求进行格式化。
+    + format 标签属性是 `%[flags][width][.precision][length]specifier`
++ 返回值：
+  + 成功  --  返回写入的字符总数
+  + 失败  --  返回一个负数
+
 ## fflush()
 
 + 功能：刷新流 `stream` 的输出缓冲区
@@ -1086,11 +1099,9 @@
   + 以后其他地方的程序需要声明类似的函数指针，只需要使用：`PrintHelloHandle pFuncOther;`
 
 
-## 概述
+## 中国大学mooc 北京邮电大学 C++语言程序设计
 
-+ 中国大学mooc 北京邮电大学 C++语言程序设计
-
-## 一
+### 概述
 
 + C++ 语言的特点
   + 使用面向对象方法，易于代码重用
