--- a/CPP/C-C++02.md
+++ b/CPP/C-C++02.md
@@ -774,6 +774,21 @@
 + 需求：
   + 头文件：`#include <sys/stat.h>`
 
+## fmemopen()
+
++ 功能：创建一个新的引用内存缓冲区的流
++ 原型：`FILE* fmemopen(void *s, size_t len, const char *modes);`
++ 参数：
+  + `s`     --  
+  + `len`   -- 
+  + `modes` -- 
++ 返回值：
+  + 成功  --  返回创建的流指针
+  + 失败  --  
++ 注意：
+  + 虽然仍使用FILE指针进行访问，但其实并没有底层文件（并没有磁盘上的实际文件，因为打开的内存流fp是在内存中的）
+  + 所有的I/O都是通过在缓冲区与主存（就是内存）之间来回传送字节来完成的
+
 ## mmap()
 
 + mmap(memory map，即地址的映射)，是一种内存映射文件的方法，将一个文件或者其他对象映射到进程的地址空间，实现文件磁盘地址和进程虚拟地址空间中一段虚拟地址的一一对应关系。
