--- a/CPP/C-C++02.md
+++ b/CPP/C-C++02.md
@@ -486,7 +486,7 @@
 
 ## access()
 
-+ 功能：确定文件或文件夹的访问权限。即，检查某个文件的存取方式，例如说是只读方式，只写方式等。如果指定的存取方式有效，则函数返回0，否则返回-1
++ 功能：确定文件或文件夹的访问权限。即，检查某个文件的存取方式，例如说是只读方式，只写方式等。
 + 原型：`int access (const char *__name, int __type);`
 + 参数
   + `name` -- 文件路径
@@ -495,6 +495,9 @@
     + `W_OK 2` -- 写权限
     + `X_OK 1` -- 执行权限
     + `F_OK 0` -- 是否存在
++ 返回值：
+  + 指定的存取方式有效，则函数返回0，
+  + 指定的存取方式无效，则返回-1
 + 需求：
   + 头文件：`#include <unistd.h>`
 
