add socket model

--- a/CPP/C-C++04.md
+++ b/CPP/C-C++04.md
@@ -181,3 +181,38 @@
   + `type`:这一项比较多，就是`%s`、`%d`之类。
   + 特别的：`%*[width] [{h | l | I64 | L}]type` 表示满足该条件的被过滤掉，不会向目标参数中写入值。
   + 未成功匹配返回0 ，否则返回格式化的参数个数。
+
+## 宏定义，宏函数，内置宏，常用宏
+
++ 在C语言中，变量类型，循环控制，基础语法等与其他高级语言基本无异；
++ 而C语言(C++)特有的两把双刃剑--指针和宏定义/宏函数，使得C/C++在底层开发中披荆斩棘，无所不能
+
+### 常用宏定义
+
++ 防止一个头文件被重复包含
+  + `#ifndef ICE_BASE_HPP`
+  + `#define ICE_BASE_HPP`
+  + `#endif  //ICE_BASE_HPP`
+
++ 重新定义一些类型，防止由于各种平台和编译器的不同，而产生的类型字节数差异，方便移植。
+  + `typedef  unsigned long int  uint32;      	/* Unsigned 32 bit value */`
+
+### 内置宏
+
++ ANSI标准
+  + `__LINE__`
+  + `__FILE__`
+  + `__DATE__`
+  + `__TIME__`
+  + `__TIME__`
+  + `__STDC__`
+
+### `__BEGIN_DECLS`
+
++ 许多头文件中都有：
+  + 文件开头有`__BEGIN_DECLS`
+  + 文件结尾有`__END_DECLS`
+
++ 它们是两个宏定义，原型为：
+  + `#define __BEGIN_DECLS extern "C"{`
+  + `#define __END_DECLS   }`
