--- a/CPP/C-C++04.md
+++ b/CPP/C-C++04.md
@@ -216,3 +216,120 @@
 + 它们是两个宏定义，原型为：
   + `#define __BEGIN_DECLS extern "C"{`
   + `#define __END_DECLS   }`
+
+## sys/epoll.h
+
+### epoll_create()
+
++ 功能：创建一个关联`size`个文件的epoll实例
++ 原型：`int epoll_create(int size);`
++ 参数：
+  + `size`  --  关联文件的个数
++ 返回值：
+  + 成功  --  返回一个文件描述符`fd`
+  + 失败  --  
+
+### epoll_create1()
+
++ 功能：创建一个标记为`flag`的epoll实例
++ 原型：`int epoll_create1(int flags);`
++ 参数：
+  + `flag`  --  
++ 返回值：
+  + 成功  --  返回一个文件描述符
+  + 失败  --  
++ 注意：
+  + 与epoll_create()一样，只不过size参数弃用了
+
+### epoll_ctl()
+
++ 功能：修改一个`epfd` epoll实例
++ 原型：`int epoll_ctl(int epfd, int op, int fd, struct epoll_event *event);`
++ 参数：
+  + `epfd`  --  要操作的epoll实例
+  + `op`    --  要执行的行为
+    + `/* Valid opcodes ( "op" parameter ) to issue to epoll_ctl().  */`
+    + `#define EPOLL_CTL_ADD 1	/* Add a file descriptor to the interface.  */`
+    + `#define EPOLL_CTL_DEL 2	/* Remove a file descriptor from the interface.  */`
+    + `#define EPOLL_CTL_MOD 3	/* Change file descriptor epoll_event structure.  */`
+  + `fd`    --  操作的目标
+  + `event` --  用户数据和触发该调用的事件
++ 返回值：
+  + 成功  --  返回0
+  + 失败  --  返回-1，并设置errno
+
+### epoll_wait()
+
++ 功能：在一个epoll实例`opfd`中等待某一事件发生
++ 原型：`int epoll_wait(int epfd, struct epoll_event *events, int maxevents, int timeout);`
++ 参数：
+  + `epfd`  --  要操作的epoll实例
+  + `events` -- 指向存放触发事件的缓冲区的结构体指针
+  + `maxevents`  --  返回事件的最大数量
+  + `timeout`  --  超时时间
++ 返回值：
+  + 成功  --  返回触发事件在缓冲区`events`中的数字
+  + 失败  --  返回-1，并设置errno
+
+### epoll_pwait()
+
++ 功能：和`epoll_wait()`相似，增加了信号掩码，临时且原子
++ 原型：`int epoll_pwait(int epfd, struct epoll_event *events, int maxevents, int timeout, const sigset_t *ss);`
++ 参数：
+  + `epfd`  --  要操作的epoll实例
+  + `events` -- 指向存放触发事件的缓冲区的结构体指针
+  + `maxevents`  --  返回事件的最大数量
+  + `timeout`  --  超时时间
+  + `ss`   --  信号集指针
++ 返回值：
+  + 成功  --  返回触发事件在缓冲区`events`中的数字
+  + 失败  --  返回-1，并设置errno
+
+## sys/socket.h
+
+### socket()
+
++ 功能：创建一个`type`类型，`domain`协议簇，`protocol`通信协议的socket，并返回一个文件描述符
++ 原型：`int socket(int domain, int type, int protocol);`
++ 参数：
+  + `domain`  --  选择所用的协议族，AF_INET，代表IPv4
+  + `type`    --  
+    + `SOCK_STREAM`, 表示有序，可靠，双工，面向连接的字节流，通常由TCP实现
+    + `SOCK_DGRAM`， 通过定长的，不可靠消息提供无连接通信，通常由UDP实现
+  + `protocol` -- 指定特定的通信type使用的协议。
+    + 在大多数实现中，每个type参数只能使用一种协议。
+    + 例如，`SOCK_STREAM`使用`TCP`， `SOCK_DGRAM`使用`UDP`
+    + 如果参数为0，则默认设置为1
++ 返回值：
+  + 成功  --  返回文件描述符
+  + 失败  --  
+
+### socketpair()
+
++ 功能：创建两个`type`类型，`domain`协议簇，`protocol`通信协议的，互相连接的socket，将文件描述符放在`fds[0]`和`fds[1]`
++ 原型：`int socketpair(int domain, int type, int protocol, int fds[2]);`
++ 参数：
+  + `domain`  --  选择所用的协议族，AF_INET，代表IPv4
+  + `type`    --  
+    + `SOCK_STREAM`, 表示有序，可靠，双工，面向连接的字节流，通常由TCP实现
+    + `SOCK_DGRAM`， 通过定长的，不可靠消息提供无连接通信，通常由UDP实现
+  + `protocol` -- 指定特定的通信type使用的协议。
+    + 在大多数实现中，每个type参数只能使用一种协议。
+    + 例如，`SOCK_STREAM`使用`TCP`， `SOCK_DGRAM`使用`UDP`
+    + 如果参数为0，则默认设置为1
+  + `fds[2]`  --  存放两个文件描述符的数组
++ 返回值：
+  + 成功  --  返回0
+  + 失败  --  返回-1
+
+### bind()
+
++ 功能：将套接字通信端点的句柄(`socket FD`)与一个特定的逻辑网络连接关联起来
++ 原型：`int bind(int fd, const struct sockaddr *address, socklen_t address_len);`
++ 参数：
+  + `socket`   --  通信端点的文件描述符
+  + `address`  --  关联的地址
+  + `len`      --  地址字节长度(the local address which is LEN bytes long)
++ 返回值：
+  + 成功  --  返回0
+  + 失败  --  返回-1，并设置errno
