update Nvidia folder

--- a/CPP/C-C++04.md
+++ b/CPP/C-C++04.md
@@ -333,3 +333,19 @@
 + 返回值：
   + 成功  --  返回0
   + 失败  --  返回-1，并设置errno
+
+### getsockname()
+
++ 功能：通过本地文件描述符的地址和长度(单位:byte)，获取socket名字
++ 原型：`int getsockname(int fd, const struct sockaddr *address, socklent *len);`
++ 参数：
+  + `fd`  --  文件描述符
+  + `address`  --  地址
+  + `len`      --  长度
++ 返回值：
+  + 成功  -- 
+  + 失败  --  
+
+### connect()
+
++ 功能：
