--- a/CPP/C-C++04.md
+++ b/CPP/C-C++04.md
@@ -348,4 +348,66 @@
 
 ### connect()
 
-+ 功能：
++ 功能：创建一个socket文件描述符和地址的连接
++ 原型：`int connect(int fd, const struct sockaddr *addr, socklent_t len);`
++ 参数：
+  + `fd`  --  文件描述符
+  + `addr` --  要连接的地址
+  + `len`  --  地址的长度(单位：字节)
++ 返回值：  
+  + 成功  --  返回0
+  + 失败  --  返回-1
+
+### recv()
+
++ 功能：从socket FD中读取N个字节，并输入到BUF中
++ 原型：`ssize_t recv(int fd, void *buf, size_t n, int flags);`
++ 参数：
+  + `fd`  --  文件描述符
+  + `buf` --  要存放的缓冲区
+  + `n`   --  读取的数据大小
+  + `flags` --  
++ 返回值：
+  + 成功  --  返回读取的字节数
+  + 失败  --  返回-1
+
+### sendto()
+
++ 功能：在socket FD上向地址ADDR(长度为ADDR_LEN)发送N个字节的BUF
++ 原型：
+  + `ssize_t sendto(int fd, const void *buf, size_t n, int flags, const struct *addr, socklen_t addr_len);`
++ 参数：
++ 返回值：
+  + 成功  --  返回发送的字节数
+  + 失败  --  返回-1
+
+### recvfrom()
+
++ 功能：通过socket FD读取N个字节到BUF
++ 原型：`ssize_t recvfrom(int fd, void *buf, size_t n, int flags, const struct *addr, socklen_t addr_len);`
++ 参数：
++ 返回值：
+  + 成功  --  返回读取的字节数
+  + 失败  --  返回-1
++ 注意：
+  + 如果ADDR不为空，将其`*ADDR_LEN`字节填充为发送方的地址，并将地址的实际大小存储在`*ADDR_LEN`中。返回读取的字节数或-1错误
+
+### sendmsg()
+
++ 功能：在socket FD上发送一个由MESSAGE描述的信息
++ 原型：`ssize_t sendmsg(int fd, const struct msghdr *message, int flags);`
++ 参数：
++ 返回值：
+  + 成功  --  返回发送的字节数
+  + 失败  --  返回-1
+
+### recvmsg()
+
++ 功能：从socket FD接收一个由MESSAGE描述的信息
++ 原型：`ssize_t recvmsg(int fd, struct msghdr *message, int flags);`
++ 参数：
++ 返回值：
+  + 成功  --  返回接收到的字节数
+  + 失败  --  返回-1
+
+### 
