--- a/CPP/C-C++04.md
+++ b/CPP/C-C++04.md
@@ -410,4 +410,50 @@
   + 成功  --  返回接收到的字节数
   + 失败  --  返回-1
 
-### 
+### getsockopt()
+
++ 功能：将套接字`FD`的选项`OPTNAME`在协议级别`level`上的当前值放入`OPTVAL` (`*OPTLEN`字节长)，并将`*OPTLEN`设置为该值的实际长度
++ 原型：`int getsockopt(int fd, int level, int optname, void *optval, socklen_t *optlen);`
++ 返回值：
+  + 成功  --  返回接收到的字节数
+  + 失败  --  返回-1
+
+### setsockopt()
+
++ 功能：设置套接字FD的选项OPTNAME在协议级别level为*OPTVAL (OPTLEN字节长)
++ 原型：`int setsockopt(int fd, int level, int optname, const void *optval, socklen_t optlen);`
++ 返回值：
+  + 成功  --  返回接收到的字节数
+  + 失败  --  返回-1
+
+### listen()
+
++ 功能：准备接受套接字FD上的连接。在进一步的请求被拒绝之前，将有N个连接请求排队
++ 原型：`int listen(int fd, int n);`
++ 返回值：
+  + 成功  --  返回接收到的字节数
+  + 失败  --  返回-1
+
+### accept()
+
++ 功能：在套接字FD上等待连接.
+  + 当连接到达时，打开一个新的套接字与之通信，将`*ADDR (*ADDR_LEN字节长)`设置为连接对等体的地址，将`*ADDR_LEN`设置为地址的实际长度，
+  + 并返回新套接字的描述符，错误则返回-1
++ 原型：`int accept(int fd, const struct sockaddr *addr, socklen_t *addr_len);`
++ 返回值：
+  + 成功  --  新套接字的描述符
+  + 失败  --  返回-1
+
+### shutdown()
+
++ 功能：关闭套接字FD上打开的全部或部分连接
++ 原型：`int shutdown(int fd, int how);`
++ 参数：
+  + `fd`  --  套接字文件描述符
+  + `how`  --
+    + `SHUT_RD`  --  不再接收连接
+    + `SHUT_WR`  --  不再传输数据
+    + `SHUT_RDWR`  --  不再传输数据和接收连接
++ 返回值：
+  + 成功  --  返回0
+  + 失败  --  返回-1
